Ajustes da API e adição de novas páginas

--- a/src/Pages/ResUndInternacao/main.css
+++ b/src/Pages/ResUndInternacao/main.css
@@ -40,7 +40,7 @@
     background-color: white;
     padding: 20px;
     margin-top: 2rem;
-    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),0 1px 5px 0 rgba(0,0,0,0.12),0 3px 1px -2px rgba(0,0,0,0.2);
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),0 1px 5px 0 rgba(0,0,0,0.12),0 3px 1px -2px rgba(0,0,0,0.2);;
 }
 .forms:hover{
     box-shadow: 1px 5px 30px 5px #aaaaaa;
@@ -49,7 +49,7 @@
 
 .qrsCards{
     width: 100%;
-    display: block;
+    /* display: block; */
     margin-top: 10rem;
     box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),0 1px 5px 0 rgba(0,0,0,0.12),0 3px 1px -2px rgba(0,0,0,0.2);
     /* margin: 50px; */
