--- a/src/Pages/Assistenciais/main.css
+++ b/src/Pages/Assistenciais/main.css
@@ -54,7 +54,9 @@
     box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),0 1px 5px 0 rgba(0,0,0,0.12),0 3px 1px -2px rgba(0,0,0,0.2);
     /* margin: 50px; */
 }
-
+@media only screen and (max-width: 600px) {
+    .qrsCards {overflow-y: scroll; }
+  }
 .qrsCards:hover{
     box-shadow: 1px 5px 30px 5px #aaaaaa;
     transition: .1s;
