--- a/src/Components/Loading/Loading.css
+++ b/src/Components/Loading/Loading.css
@@ -1,13 +1,37 @@
-.loader_container{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: 50%;
-    /* margin-top: 40vh; */
-}
 
-.loader{
-    width: 120px;
+@keyframes ldio-dbsq6cmh4q {
+  0% { transform: rotate(0deg) }
+  50% { transform: rotate(180deg) }
+  100% { transform: rotate(360deg) }
 }
+.ldio-dbsq6cmh4q div {
+  position: absolute;
+  animation: ldio-dbsq6cmh4q 1s linear infinite;
+  width: 160px;
+  height: 160px;
+  top: 20px;
+  left: 20px;
+  border-radius: 50%;
+  box-shadow: 0 4px 0 0 #fcff1d;
+  transform-origin: 80px 82px;
+}
+.loadingio-spinner-eclipse-uayllve2zes {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left:50% ;
+  width: 200px;
+  height: 200px;
+  display: inline-block;
+  overflow: hidden;
+  background: black;
+}
+.ldio-dbsq6cmh4q {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  transform: translateZ(0) scale(1);
+  backface-visibility: hidden;
+  transform-origin: 0 0; /* see note above */
+}
+.ldio-dbsq6cmh4q div { box-sizing: content-box; }
