--- a/src/Components/Loading/Loading.css
+++ b/src/Components/Loading/Loading.css
@@ -1,32 +1,54 @@
 
-@keyframes ldio-dbsq6cmh4q {
-  0% { transform: rotate(0deg) }
-  50% { transform: rotate(180deg) }
+
+@keyframes ldio-p6v39z9zh7h {
+  0% { transform: rotate(0) }
   100% { transform: rotate(360deg) }
 }
-.ldio-dbsq6cmh4q div {
+.ldio-p6v39z9zh7h div { box-sizing: border-box!important }
+.ldio-p6v39z9zh7h > div {
   position: absolute;
-  animation: ldio-dbsq6cmh4q 1s linear infinite;
-  width: 160px;
-  height: 160px;
-  top: 20px;
-  left: 20px;
+  width: 144px;
+  height: 144px;
+  top: 28px;
+  left: 28px;
   border-radius: 50%;
-  box-shadow: 0 4px 0 0 #fcff1d;
-  transform-origin: 80px 82px;
+  border: 16px solid #000;
+  border-color: #f2dd02 transparent #f2dd02 transparent;
+  animation: ldio-p6v39z9zh7h 1s linear infinite;
 }
-.loadingio-spinner-eclipse-uayllve2zes {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-left:50% ;
+.ldio-p6v39z9zh7h > div:nth-child(2) { border-color: transparent }
+.ldio-p6v39z9zh7h > div:nth-child(2) div {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  transform: rotate(45deg);
+}
+.ldio-p6v39z9zh7h > div:nth-child(2) div:before, .ldio-p6v39z9zh7h > div:nth-child(2) div:after { 
+  content: "";
+  display: block;
+  position: absolute;
+  width: 16px;
+  height: 16px;
+  top: -16px;
+  left: 48px;
+  background: #f2dd02;
+  border-radius: 50%;
+  box-shadow: 0 128px 0 0 #f2dd02;
+}
+.ldio-p6v39z9zh7h > div:nth-child(2) div:after { 
+  left: -16px;
+  top: 48px;
+  box-shadow: 128px 0 0 0 #f2dd02;
+}
+.loadingio-spinner-dual-ring-irkiohze2e {
+  position: relative; 
   width: 200px;
   height: 200px;
   display: inline-block;
   overflow: hidden;
-  background: black;
+  background: #ffffff;
 }
-.ldio-dbsq6cmh4q {
+.ldio-p6v39z9zh7h {
   width: 100%;
   height: 100%;
   position: relative;
@@ -34,4 +56,4 @@
   backface-visibility: hidden;
   transform-origin: 0 0; /* see note above */
 }
-.ldio-dbsq6cmh4q div { box-sizing: content-box; }
+.ldio-p6v39z9zh7h div { box-sizing: content-box; }
