--- a/src/Pages/Assistenciais/Cirurgias/main.css
+++ b/src/Pages/Assistenciais/Cirurgias/main.css
@@ -5,6 +5,7 @@
     align-items: center;
     text-align: center;
     justify-content: center;
+    position: relative;
     
 }
 
@@ -26,21 +27,21 @@
     box-shadow: 0px;
     margin: 5px;
     padding: 5px;
-    margin-top: 10px;
+    /* margin-top: 10px; */
     
 }
 
-.fields{
+/* .fields{
     display: flex;
     margin:10px;
-}
+} */
 .forms{
     width: 100%;
     display: block;
     background-color: white;
     padding: 20px;
     margin-top: 2rem;
-    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),0 1px 5px 0 rgba(0,0,0,0.12),0 3px 1px -2px rgba(0,0,0,0.2);;
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),0 1px 5px 0 rgba(0,0,0,0.12),0 3px 1px -2px rgba(0,0,0,0.2);
 }
 .forms:hover{
     box-shadow: 1px 5px 30px 5px #aaaaaa;
@@ -49,17 +50,18 @@
 
 .qrsCards{
     width: 100%;
-    /* display: block; */
+    display: block;
     margin-top: 10rem;
     box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),0 1px 5px 0 rgba(0,0,0,0.12),0 3px 1px -2px rgba(0,0,0,0.2);
     /* margin: 50px; */
 }
-
+@media only screen and (max-width: 600px) {
+    .qrsCards {overflow-y: scroll; }
+  }
 .qrsCards:hover{
     box-shadow: 1px 5px 30px 5px #aaaaaa;
     transition: .1s;
 }
-
 
 .buttons button{
     background-color: #333;
@@ -70,12 +72,11 @@
     line-height: 30px;
 }
 
-.legendas{
-    position: absolute;
-    font-size: small;
-    text-align: left;
-}
-.legTitle{
-    display: flex;
+.tbodyClass{
     
+    width: 100%;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
 }
